Update title of the markdown cell in notebook

--- a/Web_scraping.ipynb
+++ b/Web_scraping.ipynb
@@ -5,7 +5,7 @@
    "id": "7f886c69",
    "metadata": {},
    "source": [
-    "### Scraping Data from a Real Website + Pandas"
+    "### Wikipedia Data Extraction Project"
    ]
   },
   {
